--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,49 @@
 version: '3.1'
 services:
   stats-server:
+    build: ./stats-service/stats-server
+    image:
+      stats-server
+    container_name:
+      stats-server
     ports:
       - "9090:9090"
+    depends_on:
+      ewm-db:
+        condition: service_started
+      stats-dtos:
+        condition: service_started
+    environment:
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewm
 
-  stats-db:
-    image: postgres:14-alpine
+  stats-dtos:
+    build: ./stats-service/stats-dtos
+    image:
+      stats-dtos
+    container_name:
+      stats-dtos
 
   ewm-service:
+    build: ./main-service
+    image:
+      ewm-service
+    container_name:
+      ewm-service
     ports:
       - "8080:8080"
+    depends_on:
+      ewm-db:
+        condition: service_started
+    environment:
+      - EWM_SERVER_URL=https//stats-server:9090
 
   ewm-db:
-    image: postgres:14-alpine
+    image:
+      postgres:14-alpine
+    container_name:
+      ewm-db
+    ports:
+      - "6541:5432"
+    environment:
+      POSTGRES_USER: ewm
+      POSTGRES_PASSWORD: ewm
