--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     container_name:
       stats-server
     ports:
-      - "9090:9090"
+      - "9091:9091"
     depends_on:
       ewm-db:
         condition: service_started
@@ -23,6 +23,22 @@ services:
     container_name:
       stats-dtos
 
+  stats-client:
+    build: ./stats-service/stats-client
+    image:
+      stats-client
+    container_name:
+      stats-client
+    ports:
+      - "9090:9090"
+    depends_on:
+      stats-dtos:
+        condition: service_started
+      stats-server:
+        condition: service_started
+    environment:
+      - EWM_STAT_SERVER_URL=http://stats-server:9091
+
   ewm-service:
     build: ./main-service
     image:
@@ -34,8 +50,10 @@ services:
     depends_on:
       ewm-db:
         condition: service_started
+      stats-client:
+        condition: service_started
     environment:
-      - EWM_SERVER_URL=https//stats-server:9090
+      - EWM_CLIENT_URL=http://stats-client:9090
 
   ewm-db:
     image:
