--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,9 @@ services:
     ports:
       - "9091:9091"
     depends_on:
-      ewm-db:
-        condition: service_started
+      - stats-db
     environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewm
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://stats-db:5432/ewm-stats
     networks:
       - net
 
@@ -25,8 +24,7 @@ services:
     ports:
       - "9090:9090"
     depends_on:
-      stats-server:
-        condition: service_started
+      - stats-server
     environment:
       - EWM_STAT_SERVER_URL=http://stats-server:9091
     networks:
@@ -41,10 +39,27 @@ services:
     ports:
       - "8080:8080"
     depends_on:
-      stats-client:
-        condition: service_started
+      - ewm-db
+      - stats-client
     environment:
       - EWM_CLIENT_URL=http://stats-client:9090
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://ewm-db:5432/ewm-main
+    networks:
+      - net
+
+  stats-db:
+    image:
+      postgres:14-alpine
+    container_name:
+      stats-db
+    ports:
+      - "6540:5432"
+    environment:
+      - POSTGRES_DB=ewm-stats
+      - POSTGRES_USER=ewm
+      - POSTGRES_PASSWORD=ewm
+    networks:
+      - net
 
   ewm-db:
     image:
@@ -54,8 +69,9 @@ services:
     ports:
       - "6541:5432"
     environment:
-      POSTGRES_USER: ewm
-      POSTGRES_PASSWORD: ewm
+      - POSTGRES_DB=ewm-main
+      - POSTGRES_USER=ewm
+      - POSTGRES_PASSWORD=ewm
     networks:
       - net
 
